# Platonic-Animation2

./: .gitignore  CMakeLists.txt  README.md
include/: Animator.h  Camera.h  ImageGenerator.h  Keyframe.h  KeyframeCollection.h  KeyframeSet.h  Line.h  LineSet.h  Object.h  Scene.h
src/: Animator.cpp  Camera.cpp  ImageGenerator.cpp  KeyframeCollection.cpp  KeyframeSet.cpp  Line.cpp  LineSet.cpp  Object.cpp  Scene.cpp  main.cpp
subtitle_generator/: subtitle_gen.py
